# ProgettoListaToDo

./: Board.cpp  Board.h  Board.ui  CMakeLists.txt  Checklist.cpp  Checklist.h  Date.cpp  Date.h  ListToDo.cpp  ListToDo.h  MainWindow.cpp  MainWindow.h  Observer.cpp  Observer.h  SottoTask.cpp  SottoTask.h  Subject.cpp  Subject.h  Task.cpp  Task.h  TaskView.cpp  TaskView.h  Time.cpp  Time.h  User.cpp  User.h  main.cpp  mainWindow.cpp  mainWindow.h  mainWindow.ui  mainwindow.ui  task.cpp  task.h  task.ui
Tests/: CMakeLists.txt  runAllTests.cpp
